# AutoFeatPlus

./: .gitignore  =0.3.7  Makefile  README copy.md  README.md  README2025.md  Vis-Revision.ipynb  Visualisations.ipynb  conftest.py  docker-compose.yml  push.sh  pyproject.toml  requirements.txt  testFile.ipynb  testing.ipynb
.claude/: settings.json
.github/workflows/: ci.yml
dashboards/: augmentation_dashboard.py
data/: preprocess.sh  split_by_gaps.py
data/6g_testbed_dataset/: datasets.csv
datasets/aug_dash_8hds9ae9/: connections_transformer.csv  metadata.txt
docker/: Dockerfile
docs/: 6g_dataset_setup.md  ARCHITECTURE.md  POC_PITCH.md  USING_OWN_DATA.md  _config.yml
docs/legacy/: README_2025_reproduction.md  README_AutoFeat_paper.md
downstream ML/: benchmark_eur_augmented.py  models.py
examples/: airflow_dag.py
results/6g_data/: SUMMARY.md  _cleanup_check_AutoFeat.csv  eur-rabbitmq_base.csv  (+37 more)
scenarios/: scenarios.yaml
scripts/: benchmark_eur_autofeat_plus_local.py  benchmark_eur_darts.py  benchmark_eur_ts_augmented_downstream.py  benchmark_kul_downstream_models.py  benchmark_kul_local.py  build_benchmark_scenario_report.py  check_eur_quality_imputegap.py  diagnose.py  infer_dataset_relationships.py  legacy_prepare_scenarios.py  plot_autofeat_plus_results.py  plot_base_autofeat_curves.py  prepare_augmentation_scenarios.py  prepare_kul_autofeat.py  run_all_scenarios.sh  run_base_table_pipeline.py  run_eur_hybrid_pipeline.py  smoke_test.py  split_eur_by_time_gaps.py  summarize_autofeat_plus_results.py  summarize_results.py
testData/: chroma.sqlite3
(+210 files in other folders)
