[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-discovery"
version = "0.0.1"

authors = [{ name = "Yuandou Wang, Andra-Denis Ionescu"}]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "autogluon == 1.3.0",
    "chromadb == 0.5.23",
    "datasketch == 1.7.0",
    "deprecation == 2.1.0",
    "ITMO-FS == 0.3.3",
    "joblib == 1.5.1",
    "matplotlib == 3.10.3",
    "neo4j",
    "notebook",
    "numpy == 2.1.3",
    "pandas == 2.2.3",
    "polars",
    "scikit-learn == 1.6.1",
    "seaborn",
    "tqdm == 4.67.1",
    "typer == 0.16.0",
    "valentine == 0.3.0",
    "sentence-transformers >= 2.7.0",
    "xxhash"
]

[project.scripts]
feature-discovery-cli = "feature_discovery.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | build
  | dist
)/
'''
